--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         engineering solutions
                         for our communities
                     </p>
-                    <a class="btn" href="contacts.html">Consult now</a>
+                    <a class="btn" href="contacts.html">Contact now</a>
                 </div>
                 <div class="hero_info d-flex flex-column col-md-5 col-xl-auto align-items-md-end">
                     <div
