--- a/faq.html
+++ b/faq.html
@@ -19,11 +19,11 @@
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="65px"><span style="margin-top: 12px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 14px;
                         width: 300px;
                         font-size: 16px;
-                        font-weight: 100;">RMC Constructions<p style="
+                        font-weight: 100;">RM Constructions<p style="
                         width: 300px;
                         font-size: 15px;
                         font-family: 'Lato', sans-serif;
@@ -464,11 +464,11 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                     <div class="footer_main-block col-sm-12 col-xl-auto">
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
                             <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="65px"><span style="margin-top: 12px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 14px;
                         width: 300px;
                         font-size: 16px;
-                        font-weight: 100;">RMC Constructions<p style="
+                        font-weight: 100;">RM Constructions<p style="
                         width: 300px;
                         font-size: 15px;
                         font-family: 'Lato', sans-serif;
