--- a/projects.html
+++ b/projects.html
@@ -28,11 +28,11 @@
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="65px"><span style="margin-top: 12px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 14px;
                         width: 300px;
                         font-size: 16px;
-                        font-weight: 100;">RMC Constructions<p style="
+                        font-weight: 100;">RM Constructions<p style="
                         width: 300px;
                         font-size: 15px;
                         font-family: 'Lato', sans-serif;
@@ -164,21 +164,21 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
                                     <picture>
                                         <source
-                                            data-srcset="/img/home/common.jpg"
-                                            srcset="/img/home/common.jpg"
+                                            data-srcset="/img/home/home-project/rmc-flat.jpg"
+                                            srcset="/img/home/home-project/rmc-flat.jpg"
                                             type="image/jpg"
                                         />
                                         <img
                                             class="projects_list-item_img lazy"
-                                            data-src="/img/home/common.jpg"
-                                            src="/img/home/common.jpg"
+                                            data-src="/img/home/home-project/rmc-flat.jpg"
+                                            src="/img/home/home-project/rmc-flat.jpg"
                                             alt="Food Factory Design and Construction"
                                         />
                                     </picture>
                                 </div>
                                 <div class="text-wrapper d-flex flex-column justify-content-between">
                                     <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                        RMC Construction @ Kottivakkam
+                                        RMC Flat @ Kottivakkam
                                         <span
                                             class="divider divider--line"
                                             data-aos="slide-right"
@@ -195,7 +195,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                             data-aos-once="true"
                                         >
                                             <i class="icon-location icon"></i>
-                                            Anna Street, Kottivakkam, Chennai
+                                            Anna Street, Natco Colony, Kottivakkam, Chennai
                                         </span>
                                         <a
                                             class="link link-arrow"
@@ -220,9 +220,9 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
                                     <picture>
                                         <source
-                                        data-srcset="/img/home/common.jpg"
-                                        srcset="/img/home/common.jpg"
-                                        type="image/jpg"
+                                        data-srcset="/img/home/home-project/towers.jpeg"
+                                        srcset="/img/home/home-project/towers.jpeg"
+                                        type="image/jpeg"
                                         />
                                         <img
                                         class="projects_list-item_img lazy"
@@ -234,7 +234,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 </div>
                                 <div class="text-wrapper d-flex flex-column justify-content-between">
                                     <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                        RMC Construction @ Thoraipakkam
+                                        RMC Enclave @ Thoraipakkam
                                         <span
                                             class="divider divider--line"
                                             data-aos="slide-right"
@@ -326,7 +326,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                         </div>
                     </figure>
                     <!-- 4 -->
-                    <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
+                    <!-- <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                         <div class="projects_list-item" data-order="4">
                             <div class="wrapper d-flex flex-wrap justify-content-between">
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
@@ -380,7 +380,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 </div>
                             </div>
                         </div>
-                    </figure>
+                    </figure> -->
                     <!-- 5 -->
                     <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                         <div class="projects_list-item" data-order="5">
@@ -668,14 +668,14 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
                                     <picture>
                                         <source
-                                            data-srcset="/img/home/common.jpg"
-                                            srcset="/img/home/common.jpg"
+                                            data-srcset="/img/home/home-project/kodai.jpg"
+                                            srcset="/img/home/home-project/kodai.jpg"
                                             type="image/jpg"
                                         />
                                         <img
                                             class="projects_list-item_img lazy"
-                                            data-src="/img/home/common.jpg"
-                                            src="/img/home/common.jpg"
+                                            data-src="/img/home/home-project/kodai.jpg"
+                                            src="/img/home/home-project/kodai.jpg"
                                             alt="RMC Construction @ "
                                         />
                                     </picture>
@@ -699,7 +699,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                             data-aos-once="true"
                                         >
                                             <i class="icon-location icon"></i>
-                                            RMC, Kodai House
+                                            Naidupuram, Kodaikanal, Tamil Nadu
                                         </span>
                                         <a
                                             class="link link-arrow"
@@ -836,21 +836,21 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
                                     <picture>
                                         <source
-                                            data-srcset="/img/home/common.jpg"
-                                            srcset="/img/home/common.jpg"
+                                            data-srcset="/img/home/home-project/vels-nursing.jpg"
+                                            srcset="/img/home/home-project/vels-nursing.jpg"
                                             type="image/jpg"
                                         />
                                         <img
                                             class="projects_list-item_img lazy"
-                                            data-src="/img/home/common.jpg"
-                                            src="/img/home/common.jpg"
+                                            data-src="/img/home/home-project/vels-nursing.jpg"
+                                            src="/img/home/home-project/vels-nursing.jpg"
                                             alt="RMC Construction @ "
                                         />
                                     </picture>
                                 </div>
                                 <div class="text-wrapper d-flex flex-column justify-content-between">
                                     <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                        RMC Construction @ Pallavaram
+                                        RMC Construction @ Periyapalayam
                                         <span
                                             class="divider divider--line"
                                             data-aos="slide-right"
@@ -867,7 +867,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                             data-aos-once="true"
                                         >
                                             <i class="icon-location icon"></i>
-                                            Vel's Medical College and Hospital, Pallavaram, Chennai
+                                            Vels Medical College and Hospital, Periyapalayam
                                         </span>
                                         <a
                                             class="link link-arrow"
@@ -1060,14 +1060,14 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
                                     <picture>
                                         <source
-                                            data-srcset="/img/home/common.jpg"
-                                            srcset="/img/home/common.jpg"
+                                            data-srcset="/img/home/home-project/anand.jpeg"
+                                            srcset="/img/home/home-project/anand.jpeg"
                                             type="image/jpg"
                                         />
                                         <img
                                             class="projects_list-item_img lazy"
-                                            data-src="/img/home/common.jpg"
-                                            src="/img/home/common.jpg"
+                                            data-src="/img/home/home-project/anand.jpeg"
+                                            src="/img/home/home-project/anand.jpeg"
                                             alt="RMC Construction @ "
                                         />
                                     </picture>
@@ -1670,7 +1670,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                         </div>
                     </figure>
                     <!-- 28 in pdf 3rd Page -->
-                    <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
+                    <!-- <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                         <div class="projects_list-item" data-order="28">
                             <div class="wrapper d-flex flex-wrap justify-content-between">
                                 <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550" data-aos-once="true">
@@ -1724,7 +1724,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                 </div>
                             </div>
                         </div>
-                    </figure>
+                    </figure> -->
                     <!-- 30 -->
                     <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                         <div class="projects_list-item" data-order="30">
@@ -1793,11 +1793,11 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                     <div class="footer_main-block col-sm-12 col-xl-auto">
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
                             <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="65px"><span style="margin-top: 12px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 14px;
                         width: 300px;
                         font-size: 16px;
-                        font-weight: 100;">RMC Constructions<p style="
+                        font-weight: 100;">RM Constructions<p style="
                         width: 300px;
                         font-size: 15px;
                         font-family: 'Lato', sans-serif;
@@ -1805,9 +1805,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                 </a>
                         </a>
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
-                            Libero volutpat sed cras ornare arcu dui vivamus. Ac tortor dignissim convallis aenean et tortor
-                            at risus
-                            viverra
+                            What we build today should last for generations to come. We should embrace the purpose of the construction and live with its value.
                         </p>
                     </div>
                     <div class="footer_main-block col-12 col-sm-6 col-md-auto">
@@ -1847,7 +1845,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                         </ul>
                     </div>
                     <div class="footer_main-block col-12 col-md-auto">
-                        <h4 class="footer_main-block_title">Quotes of the day</h4>
+                        <h4 class="footer_main-block_title">Our Philosophy</h4>
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--newsletter">
                             <span style="font-family: Archivo,sans-serif;
                             font-weight: 900;
