footer-logo-update

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@100&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.min.css" />
+
+    <style>
+        @media screen and (max-width:768px) {
+            .hero_container{
+                margin-top: 100px!important;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -27,11 +35,11 @@
                 <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
                     <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 15px;
-                        width: 300px;
+                        width: 150px;
                         font-size: 16px;
                         font-weight: 100;">RM Constructions
                         <p style="
-                        width: 300px;
+                        width: 150px;
                         font-size: 14px;
                         font-family: 'Lato', sans-serif;
 font-family: 'Montserrat', sans-serif;">Builders & Promoters</p>
@@ -996,10 +1004,10 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p>
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
                             <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
                         margin-left: 14px;
-                        width: 300px;
+                        width: 150px;
                         font-size: 16px;
                         font-weight: 100;">RM Constructions<p style="
-                        width: 300px;
+                        width: 175px;
                         font-size: 15px;
                         font-family: 'Lato', sans-serif;
 font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
